--- a/old/index.html
+++ b/old/index.html
@@ -18,53 +18,51 @@
             <img src="avatar.png" width="128px" alt="EppsNL avatar" />
         </div>
         
-		<h1>@EppsNL</h1>
-		<div class="bio">Just a creative idiot trying to survive</div>
+		<h1>@EppsNL (Kevin)</h1>
+		<div class="bio">Just a creative idiot enjoying his life</div>
 		
 		<! -- Begin list -->
 		<a class="tile" href="https://www.epps.nl">
             <div class="icon" style="color: #FF8019;">
-                <i class="fa-solid fa-globe fa-3x"></i>
+                <i class="fa-solid fa-globe "></i>
             </div>
-            <p>Personal Website</p>
+            <p>My Personal Website</p>
             <div class="tile-share-button"></div>
         </a>
 		
 		<a class="tile" href="https://www.youtube.com/@eppsnl">
             <div class="icon" style="color: #FF0000;">
-                <i class="fa-brands fa-youtube fa-3x"></i>
+                <i class="fa-brands fa-youtube"></i>
             </div>
             <p>YouTube Channel</p>
             <div class="tile-share-button"></div>
         </a>
-		
+		<a class="tile" href="https://discordapp.com/users/296720531460194326">
+            <div class="icon" style="color: #5562EA;">
+                <i class="fa-brands fa-discord "></i>
+            </div>
+            <p>Discord Account (DM's open)</p>
+            <div class="tile-share-button"></div>
+        </a>		
 		<a class="tile" href="https://steamcommunity.com/id/EppsNL/">
             <div class="icon" style="color: #171A21;">
-                <i class="fa-brands fa-steam fa-3x"></i>
+                <i class="fa-brands fa-steam "></i>
             </div>
             <p>Steam Profile</p>
             <div class="tile-share-button"></div>
         </a>
-		
-		<a class="tile" href="https://discordapp.com/users/296720531460194326">
-            <div class="icon" style="color: #5562EA;">
-                <i class="fa-brands fa-discord fa-3x"></i>
-            </div>
-            <p>Discord Account</p>
-            <div class="tile-share-button"></div>
-        </a>		
-		
 		<a class="tile" href="https://github.com/EppsNL">
             <div class="icon" style="color: #161B22;">
-                <i class="fa-brands fa-github fa-3x"></i>
+                <i class="fa-brands fa-github "></i>
             </div>
             <p>GitHub Profile</p>
             <div class="tile-share-button"></div>
         </a>		
-
+		<h3>Social Media</h3>
+		<div class="note">(Note: I mostly lurk on social media and don't accept friend requests from strangers)</div>
 		<a class="tile" href="https://twitter.com/EppsNL">
             <div class="icon" style="color: #1DA1F2;">
-                <i class="fa-brands fa-twitter fa-3x"></i>
+                <i class="fa-brands fa-twitter "></i>
             </div>
             <p>Twitter Profile</p>
             <div class="tile-share-button"></div>
@@ -72,7 +70,7 @@
 
 		<a class="tile" href="https://www.instagram.com/eppsnl/">
             <div class="icon" style="color: #B92C63;">
-                <i class="fa-brands fa-instagram fa-3x"></i>
+                <i class="fa-brands fa-instagram "></i>
             </div>
             <p>Instagram Profile</p>
             <div class="tile-share-button"></div>
@@ -80,7 +78,7 @@
 
 		<a class="tile" href="https://www.facebook.com/NLEpps">
             <div class="icon" style="color: #1877F2;">
-                <i class="fa-brands fa-facebook fa-3x"></i>
+                <i class="fa-brands fa-facebook "></i>
             </div>
             <p>Facebook Profile</p>
             <div class="tile-share-button"></div>
