--- a/new/index.html
+++ b/new/index.html
@@ -7,6 +7,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet"> 
 	<script src="https://kit.fontawesome.com/caa6f5fded.js" crossorigin="anonymous"></script>
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
+	<meta charset="utf-8">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
 				<ul>
 					<a href="https://www.epps.nl">
 						<li>
-							<i class="fa-solid fa-globe" style="color: #FF8019;"></i> Epps.nl - My personal website
+							<i class="fa-solid fa-globe" style="color: #FF8019;"></i> Epps.nl - Personal Website
 						</li>
 					</a>
 					<a href="https://www.youtube.com/@eppsnl">
@@ -37,7 +38,7 @@
 					</a>
 					<a href="https://discordapp.com/users/296720531460194326">
 						<li>
-							<i class="fa-brands fa-discord" style="color: #5562EA;"></i> Discord account (DM's open)
+							<i class="fa-brands fa-discord" style="color: #5562EA;"></i> Discord Account (DM's open)
 						</li>
 					</a>
 					<a href="https://steamcommunity.com/id/EppsNL/">
@@ -57,22 +58,43 @@
 				<ul>
 					<a href="https://twitter.com/EppsNL">
 						<li>
-							<i class="fa-brands fa-twitter" style="color: #1DA1F2;"></i> Twitter
+							<i class="fa-brands fa-x-twitter" style="color: #000;"></i> X / Twitter
 						</li>
-					</a>					
+					</a>
+					<!-- Bluesky, reserved for once I get my invite
+					<a href="#">
+						<li>
+							<i class="fa-solid fa-square" style="color: #0083FE;"></i> X / Bluesky.social
+						</li>
+					</a>
+					-->
 					<a href="https://www.instagram.com/eppsnl/">
 						<li>
 							<i class="fa-brands fa-instagram" style="color: #B92C63;"></i> Instagram
 						</li>
 					</a>
+					<!-- Threads not yet available in EU countries.
+					<a href="https://www.threads.net/@eppsnl">
+						<li>
+							<i class="fa-brands fa-square-threads fa-lg" style="color: #000;"></i> Threads
+						</li>
+					</a>
+					-->
 					<a href="https://www.facebook.com/NLEpps">
 						<li>
 							<i class="fa-brands fa-facebook" style="color: #1877F2;"></i> Facebook
 						</li>
 					</a>
+					<!-- reserverd, but no one uses Mastadon lol
 					<a href="https://mastodon.social/@EppsNL">
 						<li>
 							<i class="fa-brands fa-mastodon" style="color: #5A48DD;"></i> Mastodon
+						</li>
+					</a>
+					-->
+					<a href="https://www.youtube.com/watch?v=gvdf5n-zI14">
+						<li>
+							<i class="fa-solid fa-lock" style="color: #0AB2F0;"></i> OnlyFans 🔞
 						</li>
 					</a>
 				</ul>
