--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>EppsNL - Linktree</title>
-    <link rel="icon" type="image/png" id="favicon" href="img/favicon.png" />
+    <link rel="icon" type="image/png" id="favicon" href="img/favicon2024_shading.png" />
     <link rel="stylesheet" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet"> 
 	<script src="https://kit.fontawesome.com/caa6f5fded.js" crossorigin="anonymous"></script>
@@ -72,13 +72,11 @@
 							<i class="fa-brands fa-instagram" style="color: #B92C63;"></i> Instagram
 						</li>
 					</a>
-					<!-- Threads not yet available in EU countries.
 					<a href="https://www.threads.net/@eppsnl">
 						<li>
 							<i class="fa-brands fa-square-threads fa-lg" style="color: #000;"></i> Threads
 						</li>
 					</a>
-					-->
 					<a href="https://www.facebook.com/NLEpps">
 						<li>
 							<i class="fa-brands fa-facebook" style="color: #1877F2;"></i> Facebook
