Updated active platforms
Removed all the platforms I no longer use. Split content up between web content and ways to contact me.

--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 				♂️/<span id="ageOutput">age</span>/🇳🇱</p>
 			</div>
 		</div>
-
-		<! -- Links -->
+		<!-- Links -->
 		<div class="grid">
             <div class="box">
-				<h3>Main</h3>
+				<h3>Web Content</h3>
 				<ul>
 					<a href="https://www.epps.nl">
 						<li>
@@ -37,34 +36,29 @@
 							<i class="fa-brands fa-youtube" style="color: #FF0000;"></i> YouTube Channel
 						</li>
 					</a>
-					<a href="https://discordapp.com/users/296720531460194326">
-						<li>
-							<i class="fa-brands fa-discord" style="color: #5562EA;"></i> Discord Account (DM's open)
-						</li>
-					</a>
-					<a href="https://steamcommunity.com/id/EppsNL/">
-						<li>
-							<i class="fa-brands fa-steam" style="color: #171A21;"></i> Steam Profile
-						</li>
-					</a>
 					<a href="https://github.com/EppsNL">
 						<li>
-							<i class="fa-brands fa-github" style="color: #161B22;"></i> Github
+							<i class="fa-brands fa-github" style="color: #FFFFEB;"></i> Github
+						</li>
+					</a>
+					<a href="https://www.youtube.com/watch?v=l60MnDJklnM">
+						<li>
+							<i class="fa-solid fa-lock" style="color: #0AB2F0;"></i> OnlyFans 🔞
 						</li>
 					</a>
 				</ul>
 			</div>
 			<div class="box">
-				<h3>Social Media</h3>
+				<h3>Ways to contact me</h3>
 				<ul>
+					<a href="https://discordapp.com/users/296720531460194326">
+						<li>
+							<i class="fa-brands fa-discord" style="color: #5562EA;"></i> Discord Direct Message
+						</li>
+					</a>
 					<a href="https://twitter.com/EppsNL">
 						<li>
 							<i class="fa-brands fa-x-twitter" style="color: #000;"></i> X / Twitter
-						</li>
-					</a>
-					<a href="https://bsky.app/profile/eppsnl.bsky.social">
-						<li>
-							<i class="fa-solid fa-square" style="color: #0083FE;"></i> Bluesky.social
 						</li>
 					</a>
 					<a href="https://www.instagram.com/eppsnl/">
@@ -72,35 +66,11 @@
 							<i class="fa-brands fa-instagram" style="color: #B92C63;"></i> Instagram
 						</li>
 					</a>
-					<a href="https://www.threads.net/@eppsnl">
-						<li>
-							<i class="fa-brands fa-square-threads fa-lg" style="color: #000;"></i> Threads
-						</li>
-					</a>
-					<a href="https://www.facebook.com/NLEpps">
-						<li>
-							<i class="fa-brands fa-facebook" style="color: #1877F2;"></i> Facebook
-						</li>
-					</a>
-					<!-- reserverd, but no one uses Mastadon lol
-					<a href="https://mastodon.social/@EppsNL">
-						<li>
-							<i class="fa-brands fa-mastodon" style="color: #5A48DD;"></i> Mastodon
-						</li>
-					</a>
-					-->
-					<a href="https://www.youtube.com/watch?v=gvdf5n-zI14">
-						<li>
-							<i class="fa-solid fa-lock" style="color: #0AB2F0;"></i> OnlyFans 🔞
-						</li>
-					</a>
 				</ul>
-				<p>Note: I mostly lurk on social media and don't accept friend requests from strangers.</p>
+				<p>Note: Discord is the fastest way to contact me as I'm far less active on social media.</p>
 			</div>
 		</div>
-		
     </div>
-
 <div class="topbar" />
 <div class="bottombar" />
 <!-- Current age calculation -->
