I am big dumb dumb
css tweaks I should had done a long time ago

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						</li>
 					</a>
 				</ul>
-				<p>Note: Discord is the fastest way to contact me as I'm far less active on social media.</p>
+				<p class="note">Note: Discord is the fastest way to contact me as I'm far less active on social media.</p>
 			</div>
 		</div>
     </div>
