--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<i class="fa-brands fa-github" style="color: #FFFFEB;"></i> Github
 						</li>
 					</a>
-					<a href="https://www.youtube.com/watch?v=l60MnDJklnM">
+					<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
 						<li>
 							<i class="fa-solid fa-lock" style="color: #0AB2F0;"></i> OnlyFans 🔞
 						</li>
@@ -56,9 +56,9 @@
 							<i class="fa-brands fa-discord" style="color: #5562EA;"></i> Discord Direct Message
 						</li>
 					</a>
-					<a href="https://twitter.com/EppsNL">
+					<a href="https://bsky.app/profile/eppsnl.bsky.social">
 						<li>
-							<i class="fa-brands fa-x-twitter" style="color: #000;"></i> X / Twitter
+							<i class="fa-brands fa-bluesky" style="color: #1185FE;"></i> Bluesky
 						</li>
 					</a>
 					<a href="https://www.instagram.com/eppsnl/">
@@ -66,8 +66,12 @@
 							<i class="fa-brands fa-instagram" style="color: #B92C63;"></i> Instagram
 						</li>
 					</a>
+					<a href="https://twitter.com/EppsNL">
+						<li>
+							<i class="fa-brands fa-x-twitter" style="color: #000;"></i> X / Twitter
+						</li>
+					</a>
 				</ul>
-				<p class="note">Note: Discord is the fastest way to contact me as I'm far less active on social media.</p>
 			</div>
 		</div>
     </div>
