--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<i class="fa-brands fa-discord" style="color: #5562EA;"></i> Discord Direct Message
 						</li>
 					</a>
-					<a href="https://bsky.app/profile/eppsnl.bsky.social">
+					<a href="https://bsky.app/profile/epps.nl">
 						<li>
 							<i class="fa-brands fa-bluesky" style="color: #1185FE;"></i> Bluesky
 						</li>
